manifests/dashboards/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: dashboards
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      volumes:
        - name: homepage-storage
          persistentVolumeClaim:
          claimName: homepage-pvc
        - name: homepage-nfs-storage
          nfs:
            server: 192.168.49.17
            path: /mnt/user/kubernetes/homepage
            readOnly: false
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:v0.10.9"
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
            name: homepage-web
            protocol: TCP
          readinessProbe:
            httpGet:
              port: homepage-web
              path: /
          volumeMounts:
            - mountPath: "/app/config"
              name: homepage-nfs-storage
            - mountPath: "/app/config2"
              name: homepage-storage
