manifests/dashboards/homepage/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-lb
  namespace: dashboards
spec:
  selector:
    app: homepage
  ports:
    - name: homepage-web
      port: 80
      targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: 10.10.0.120
